--- a/index/style.css
+++ b/index/style.css
@@ -1,315 +1,32 @@
-@charset "utf-8";
+html {
+  overflow: hidden;
+}
 
 body {
-  text-align: center;
-}
-
-a {
-  outline: none;
-  border: 0;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
-}
-
-img {
-  border: 0;
-}
-
-a:link {
-  color: #0000ff;
-  text-decoration: none;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
-}
-
-a:hover {
-  color: #dd127b;
-  text-decoration: none;
-}
-
-a:visited {
-  color: #0000ff;
-  text-decoration: none;
-}
-
-#tlo {
-  width: 1000px;
-  margin: 0 auto;
-}
-
-#logo1 {
-  margin: 30px 0px 0px 0px;
-  color: #fff;
-  width: 1000px;
-  height: 130px;
-  font-size: 26px;
-  text-align: left;
-  padding: 88px 0px 0px 20px;
-}
-
-#menu {
-  background-color: #dd127b;
-  float: right;
-  width: 1000px;
-  height: 80px;
+  height: 100vh;
+  perspective: 1px;
+  transform-style: preserve-3d;
+  overflow-x: hidden;
+  overflow-y: auto;
   margin: 0;
-}
-
-#caly {
-  height: 100%;
-  clear: both;
-  overflow: hidden;
-}
-
-#srodek {
-  background-color: #dd127b;
-  margin: 0;
-  height: 60px;
-  padding: 25px 0px 0px 20px;
-  font-size: 25px;
-  color: #fff;
-}
-
-#dolny {
-  width: 1000px;
-  background: url(grafa/dolny.jpg);
-  background-color: #fff;
+  background: url(/resources/header/background.jpg);
+  background-size: 100%;
   background-repeat: repeat-y;
-  margin: 0;
-  padding: 20px 0 20px 20px;
-  font-size: 25px;
-  color: #000;
-}
-
-#dolny0 {
-  width: 1000px;
-  background: url(grafa/dolny.jpg);
-  background-color: #fff;
-  background-repeat: repeat-y;
-  margin: 0;
-  padding: 0;
-  font-size: 25px;
-  color: #000;
-}
-
-#dolny1 {
-  width: 600px;
-  background: url(grafa/dolny.jpg);
-  background-color: #fff;
-  background-repeat: repeat-y;
-  margin: 0;
-  padding: 20px 30px 30px 20px;
-  font-size: 25px;
-  color: #000;
-  float: left;
-}
-
-#dolny2 {
-  width: 350px;
-  margin: 0;
-  padding: 0;
-  font-size: 25px;
-  color: #000;
-  float: right;
-}
-
-#stopa {
-  margin: 0px 0px 30px 0px;
-  clear: both;
-  width: 1000px;
-  height: 70px;
-
-  text-align: center;
-  color: #000;
-}
-
-#galeria {
-  width: 1000px;
-  background: url(grafa/dolny.jpg);
-  background-color: #fff;
-  background-repeat: repeat-y;
-  margin: 0px;
-  padding: 0px;
-  font-size: 0px;
-  color: #000;
-}
-
-#stopa a:link {
-  color: #000;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-#stopa a:hover {
-  color: #708090;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-h1 {
-  color: #8cb9d1;
-  padding: 0px 0px 0px 0px;
-  font-size: 18px;
-}
-
-#face {
-  width: 700px;
-  height: 30px;
-  text-align: left;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
-}
-
-.fb-like {
-  width: 700px;
-  text-align: left;
-  padding: 5px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
-}
-
-#menu ul,
-ul li {
-  display: block;
-  list-style: none;
-  margin: 10px 0 0 0;
-  padding: 0px 0 0 20px;
-}
-
-ul {
-  float: left;
-  padding: 0px 0px 0px 0px;
-}
-
-ul li {
-  float: left;
-}
-
-ul a:link,
-ul a:visited {
-  text-decoration: none;
-  display: block;
-  color: #fff;
-  padding: 15px 70px 0px 0px;
-  font-size: 25px;
-}
-
-ul a:hover {
-  color: #8cb9d1;
-}
-
-#slider1 ul,
-ul li {
-  display: block;
-  list-style: none;
-  margin: 0;
-  padding: 0px;
-  font-size: 25px;
-}
-
-#slider1 {
-  width: 1000px;
-  /* important to be same as image width */
-  height: 500px;
-  /* important to be same as image height */
-  position: relative;
-  /* important */
-  overflow: hidden;
-  /* important */
-}
-
-#slider1Content {
-  width: 1000px;
-  /* important to be same as image width or wider */
-  position: absolute;
-  top: 0;
-  margin-left: 0;
-}
-
-.slider1Image {
-  float: left;
-  position: relative;
-  display: none;
-}
-
-.slider1Image span {
-  position: absolute;
-  font: 35px/35px Arial, Helvetica, sans-serif;
-  padding: 20px 0px 0px 20px;
-  width: 500px;
-  background-color: #000;
-  filter: alpha(opacity=50);
-  -moz-opacity: 0.7;
-  -khtml-opacity: 0.7;
-  opacity: 0.9;
-  color: #fff;
-  display: none;
-}
-
-.clear {
-  clear: both;
-}
-
-.slider1Image span strong {
-  font-size: 25px;
-}
-
-.left {
-  top: 0;
-  left: 0;
-  width: 300px !important;
-  height: 500px;
-}
-
-.right {
-  right: 0;
-  bottom: 0;
-  width: 90px !important;
-  height: 290px;
-}
-
-/* moje */
-/* slider */
-
-.slide {
-  animation: fading 7s infinite;
-}
-
-@keyframes fading {
-  0% {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
-.slider {
-  margin: 0px auto;
-}
-
-#background {
-  background-color: #000;
-  margin: 0px auto;
+  background-color: rgb(29, 29, 29);
 }
 
 #header {
-  max-width: 100%;
-  height: auto;
+  display: flex;
+  z-index: 999999999;
   margin: 0px auto;
-  background: url(/resources/header/background.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  box-shadow: 10px 0px 10px #0e0e0e;
+  width: 100%;
+  height: 30.5vh;
 }
 
 #logo {
-  max-width: 90%;
-  height: auto;
+  width: 60%;
+  display: block;
+  margin: auto auto;
 }
 
 /* navigation bar */
@@ -320,14 +37,15 @@ ul li {
   display: flex;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2;
+  z-index: 9999;
   font-family: "Acme", sans-serif;
   font-weight: normal !important;
   font-style: normal !important;
-  position: sticky;
+  position: sticky !important;
   top: 0;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  transition: 0.5s;
 }
 
 #topnav a {
@@ -384,10 +102,11 @@ ul li {
 /* curtain menu */
 
 .overlay {
-  height: 100%;
+  overflow: hidden;
+  height: 0;
   width: 0;
-  position: fixed;
-  z-index: 999;
+  position: sticky;
+  z-index: 99999;
   top: 0;
   left: 0;
   background-color: rgb(0, 0, 0);
@@ -426,6 +145,10 @@ ul li {
 }
 
 @media screen and (max-height: 450px) {
+  .overlay {
+    position: sticky;
+  }
+
   .overlay a {
     font-size: 20px;
   }
@@ -446,20 +169,34 @@ ul li {
 }
 
 .main {
-  position: relative;
-  height: 100vh;
-  width: 100%;
+  position: absolute;
   color: #fff;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 720px) {
+  .main {
+    top: 8.5vh;
+  }
+
+  #header {
+    height: 15vh;
+  }
 }
 
 .main .slider {
-  position: relative;
-  height: 100vh;
+  top: 17vh;
+  position: absolute;
+  height:90%;
   width: 100%;
+  z-index: 0;
+  transform: translateZ(-1px) scale(2);
 }
 
 .main .slider .slides {
   position: absolute;
+  right: 3px;
   height: 100%;
   width: 100%;
   display: flex;
@@ -468,7 +205,7 @@ ul li {
   justify-content: center;
   overflow: hidden;
   opacity: 0;
-  transition: 0.3s ease-in-out;
+  transition: 1s ease-in-out;
 }
 
 .main .slider .slides.current {
@@ -476,73 +213,88 @@ ul li {
   opacity: 1;
 }
 
-.main .slider .slides:nth-child(1) {
+.main .slider .slides:nth-child(1)::before {
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
     url("/resources/slider/1.jpg");
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
   background-repeat: no-repeat;
+  background-position: center;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -99;
+  /* transform: translateZ(-1px) scale(2); */
 }
 
-.main .slider .slides:nth-child(2) {
+.main .slider .slides:nth-child(2)::before {
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
     url("/resources/slider/2.jpg");
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
   background-repeat: no-repeat;
+  background-position: center;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -99;
+  /* transform: translateZ(-1px) scale(2); */
 }
 
-.main .slider .slides:nth-child(3) {
+.main .slider .slides:nth-child(3)::before {
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
     url("/resources/slider/3.jpg");
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
   background-repeat: no-repeat;
+  background-position: center;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -99;
+  /* transform: translateZ(-1px) scale(2); */
 }
 
-.main .slider .slides:nth-child(4) {
+.main .slider .slides:nth-child(4)::before {
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
     url("/resources/slider/4.jpg");
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
   background-repeat: no-repeat;
+  background-position: center;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -99;
+  /* transform: translateZ(-1px) scale(2); */
 }
 
-.main .slider .slides:nth-child(5) {
+.main .slider .slides:nth-child(5)::before {
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
     url("/resources/slider/5.jpg");
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
   background-repeat: no-repeat;
+  background-position: center;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -99;
+  /* transform: translateZ(-1px) scale(2); */
 }
 
-.main .slider .slides .background2 {
-  width: fit-content;
-  background-color: rgba(36, 131, 84, 0.6);
-  padding: 1em;
-  margin-left: -500%;
-  margin-bottom: 2em;
-  transition: 2s linear;
-}
-
-.main .slider .slides.current .background2 {
-  animation: animatebackground2 0.3s linear forwards 1;
-  animation-delay: 0.2s;
-}
-
-@keyframes animatebackground2 {
-  to {
-    margin-left: 0;
-  }
+.description {
+  position: absolute;
+  display: block;
+  width: 65%;
+  margin: 0px auto;
+  text-align: center;
 }
 
 .main .slider .slides h1 {
-  font-size: 5em;
+  margin: auto auto;
+  color: #8cb9d1;
+  /* font-size: 3rem; */
   font-weight: 600;
   text-shadow: 0px 0.5px 12px rgba(0, 0, 0, 0.9);
   margin-left: -500%;
@@ -560,30 +312,13 @@ ul li {
   }
 }
 
-.main .slider .slides .background {
-  width: fit-content;
-  background-color: rgba(92, 36, 131, 0.6);
-  padding: 1em;
-  margin-right: -500%;
-  transition: 2s linear;
-}
-
-.main .slider .slides.current .background {
-  animation: animatebackground 0.3s linear forwards 1;
-  animation-delay: 0.2s;
-}
-
-@keyframes animatebackground {
-  to {
-    margin-right: 0;
-  }
-}
-
 .main .slider .slides p {
-  font-size: 3em;
+  /* font-size: 2em; */
   text-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.5);
   margin-right: -500%;
   transition: 0.5s linear;
+  color: aliceblue;
+  /* margin: 0px auto; */
 }
 
 .main .slider .slides.current p {
@@ -598,6 +333,7 @@ ul li {
 }
 
 .main .prev {
+  transform: none;
   position: absolute;
   color: #fff;
   top: 50%;
@@ -618,6 +354,7 @@ ul li {
 }
 
 .main .next {
+  display: block;
   position: absolute;
   color: #fff;
   top: 50%;
@@ -628,11 +365,10 @@ ul li {
   font-weight: 600;
   border: 2px solid #fff;
   padding: 10px 17px;
-  display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  transition: 0.3s ease-in-out;
+  transition: 0.2s ease-in-out;
   cursor: pointer;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
 }
@@ -641,4 +377,363 @@ ul li {
 .main .next:hover {
   background: #dd127b;
   border-color: #dd127b;
+}
+
+.flexcontainer {
+  text-align: center;
+  width: 100%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.flexcontainer .box {
+  margin-bottom: 30px;
+  width: 33%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.flexcontainer .circle {
+  font-family: "Kanit", sans-serif;
+  font-size: 200%;
+  font-weight: 600;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  margin: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding: 30px;
+  background-color: #dd127b;
+  border: 2px solid #171717;
+  box-shadow: 0 0 0 2px #dd127b;
+}
+
+.flexcontainer h2 {
+  font-family: "Kanit", sans-serif;
+  padding: 5px 0px;
+  border-bottom: 1px #fff solid;
+  margin: auto 10px;
+  color: #dd127b;
+  font-weight: 600;
+  text-shadow: 0px 0.5px 12px rgba(0, 0, 0, 0);
+}
+
+@media screen and (max-width: 500px) {
+  #srodek .box {
+    width: 100%;
+  }
+
+  #srodek .summary {
+    font-size: 6vw;
+  }
+
+  #srodek .box {
+    justify-content: left;
+  }
+
+  /* .flexcontainer .icon {
+    width: 70%;
+  } */
+
+  #srodek h2 {
+    margin-bottom: auto 50px;
+  }
+}
+
+h1 {
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  margin: 50px auto;
+}
+
+#srodek {
+  font-family: "Kanit", sans-serif;
+  /* margin: 0px auto 50vh auto; */
+  box-shadow: 0px -12px 23px -4px rgba(0, 0, 0, 0.6);
+  z-index: 999;
+  position: absolute;
+  top: 170vh;
+  background-color: #171717;
+  width: 100%;
+}
+
+#dol {
+  position: absolute;
+  top: 280vh;
+  width: 100%;
+  z-index: 0;
+  transform: translateZ(-1px) scale(2);
+}
+
+#dol h1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #f2f2f2;
+  /* background-color: rgb(221, 18, 123, 0.65); */
+}
+
+.container {
+  position: relative;
+  width: 30%;
+  overflow: hidden;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s ease;
+  backface-visibility: hidden;
+  width: 100%;
+}
+
+.middle {
+  width: 100%;
+  height: 100%;
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.5;
+  transform: scale(1.1);
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.middle .description2 {
+  position: absolute;
+  top: 15%;
+  text-align: center;
+  /* text-shadow: 1px 1px 1px #000000, 0 0 3px#ffffff; */
+  width: 90%;
+  height: 60%;
+  color: #ffffff;
+  padding: 5%;
+  font-size: 1.3vw;
+  font-weight: 100;
+  font-family: "Alata", sans-serif;
+}
+
+.buttonField {
+  width: 100%;
+  height: 25%;
+  position: absolute;
+  bottom: 0px;
+}
+
+.myButton {
+  position: relative;
+  margin: 2px auto;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff !important;
+  font-family: Arial;
+  font-size: 1.3vw;
+  padding: 8px 15px;
+  width: 40%;
+  text-decoration: none;
+  font-weight: bold;
+  font-family: "Raleway", sans-serif;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: background-color 0.3s;
+  border-radius: 7px;
+}
+
+.myButton:hover {
+  background-color: rgba(0, 0, 0, 1);
+}
+
+.myButton::after {
+  margin-top: 2px;
+  content: "";
+  display: block;
+  width: 0;
+  height: 1px;
+  background: #dd127b;
+  transition: width 0.3s;
+}
+
+.myButton:hover::after {
+  width: 100%;
+  transition: width 0.3s;
+}
+
+.title {
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 0px;
+  width: 100%;
+  height: 15%;
+  position: absolute;
+  top: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.title h4 {
+  font-size: 1.7vw;
+  position: relative;
+  margin: auto;
+  text-align: center;
+  color: #ff2a98;
+  font-family: "Alata", sans-serif;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    width: 100%;
+  }
+
+  .title h4 {
+    font-size: 5vw;
+  }
+}
+
+.summary {
+  margin: 40px auto;
+  display: block;
+  font-size: 2.5rem;
+  font-family: "Bangers", sans-serif;
+  color: cornsilk;
+  width: 80%;
+}
+
+#footer {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  background-color: rgba(0, 0, 0, 0.35);
+  color: rgb(175, 172, 172);
+  text-decoration: none;
+  width: 100vw;
+  height: 30vh;
+  box-sizing: border-box;
+  z-index: 999;
+  position: relative;
+  top: 430vh;
+}
+
+a:-webkit-any-link {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.column1,
+.column2,
+.column3 {
+  top: 0;
+  width: 30%;
+  height: 70%;
+}
+
+.column4 {
+  width: 80%;
+  height: 20%;
+  bottom: 0;
+  border-top: 1px solid rgba(255, 255, 255, 1);
+  padding: 8px;
+}
+
+.column1 {
+  background-image: url(/resources/header/logo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-y: center;
+}
+
+#footer h5 {
+  margin-top: 20px;
+  font-size: 1rem;
+}
+
+#footer h6 {
+  margin-top: 10px;
+  font-size: 0.8rem;
+}
+
+#footer h6 i {
+  margin-right: 20px;
+}
+
+#footer h6 span {
+  width: 10px;
+}
+
+.iconLink {
+  margin-top: 10px;
+  font-size: 0.5rem;
+  color: #8cb9d1;
+}
+
+.fa-facebook-square {
+  color: rgb(175, 172, 172);
+  margin-top: 10px;
+  transition: 0.2s;
+}
+
+.fa-facebook-square:hover {
+  color: blue;
+  cursor: pointer;
+}
+
+/* .text {
+  background-color: #4caf50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+} */
+
+@media screen and (max-width: 500px) {
+  #footer {
+    top: 500vh;
+    height: 55vh;
+    justify-content: center;
+  }
+  .column1,
+  .column2,
+  .column3 {
+    top: 0;
+    width: 80%;
+    height: 20%;
+    margin: auto;
+  }
+  .column1 {
+    margin-bottom: 0px;
+  }
+  .column4 {
+    height: 10%;
+  }
+  #srodek {
+    top: 130vh;
+  }
+
+  .flexcontainer .circle {
+    width: 20px;
+    height: 20px;
+    margin: auto 20px;
+  }
+
+  #dol {
+    top: 290vh;
+  }
 }
