--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ body {
 .main .slider .slides h1 {
   margin: auto auto;
   color: #8cb9d1;
-  /* font-size: 3rem; */
+  font-size: 3rem;
   font-weight: 600;
   text-shadow: 0px 0.5px 12px rgba(0, 0, 0, 0.9);
   margin-left: -500%;
@@ -321,7 +321,7 @@ body {
 }
 
 .main .slider .slides p {
-  /* font-size: 2em; */
+  font-size: 1.7em;
   text-shadow: 0px 0.5px 5px rgba(0, 0, 0, 0.5);
   margin-right: -500%;
   transition: 0.5s linear;
@@ -435,6 +435,18 @@ body {
 }
 
 @media screen and (max-width: 500px) {
+  .main .slider .slides h1 {
+    font-size: 1.8rem;
+  }
+  .main .slider .slides p {
+    font-size: 1em;
+  }
+  .main .prev:hover,
+  .main .next:hover {
+    background: none;
+    border: 2px solid #fff;
+  }
+
   #srodek .box {
     width: 100%;
   }
